test/parser/positive/ImplicitThisForFields.java
public class ImplicitThisForFields {
  public ImplicitThisForFields() {}
  protected int x;
  public int m() {
    return x;
  }
}
