test/parser/negative/UnaryPlus.java
public class UnaryPlus {
    public UnaryPlus() {}
  public int m(int x) {
    return +x; 
  }
}
